apps/traefik/external/mealie.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: traefik
spec:
  ports:
    - port: 9925
      protocol: TCP
      targetPort: 9925
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mealie
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.5.12
    ports:
      - port: 9925
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.home.diceninjagaming.com`)
      kind: Rule
      middlewares:
        - name: default-whitelist
          namespace: traefik
      services:
        - name: mealie
          port: 9925
  tls:
    secretName: wildcard-home-diceninjagaming-com-tls
