apps/traefik/external/paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: traefik
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: paperless
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.5.9
    ports:
      - port: 8000
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.home.diceninjagaming.com`)
      kind: Rule
      middlewares:
        - name: default-whitelist
          namespace: traefik
      services:
        - name: paperless
          port: 8000
  tls:
    secretName: wildcard-home-diceninjagaming-com-tls
